--- a/templates/tabs/data.html
+++ b/templates/tabs/data.html
@@ -5,12 +5,11 @@
     }
 
     .folder {
-        width: 47px;
+        width: 45px;
         height: 32px;
         position: relative;
         background-color: rgb(236, 180, 72);
-        border-radius: 0 6px 6px 6px;
-        box-shadow: 4px 4px 7px rgba(0, 0, 0, 0.59);
+        border-radius: 0 4px 4px 4px;
         margin-left: -10px;
     }
 
@@ -18,7 +17,7 @@
         content: '';
         width: 50%;
         height: 4px;
-        border-radius: 0 5px 0 0;
+        border-radius: 4px 5px 0 0;
         background-color: rgb(236, 180, 72);
         position: absolute;
         top: -4px;
